# vapp

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
examples/app/: CMakeLists.txt  app.cpp  example_class.cpp  example_class.hpp  example_fragment.cpp  example_fragment.hpp
src/: CMakeLists.txt
src/app/: app.cpp  app.hpp  audio_recorder.hpp  example_class.cpp  example_class.hpp  example_fragment.cpp  example_fragment.hpp
src/vapp/: vapp.cpp  vapp.hpp
src/vapp/core/: action_manager.cpp  action_manager.hpp  actions.cpp  actions.hpp  ai_request.cpp  ai_request.hpp  app_params.hpp  app_settings.hpp  audio_recorder.cpp  audio_recorder.hpp  database.cpp  database.hpp  entry_point.cpp  event_system.cpp  event_system.hpp  logger.cpp  logger.hpp  network.cpp  network.hpp  resource_manager.cpp  resource_manager.hpp  speech_to_text.cpp  speech_to_text.hpp  timer.cpp  timer.hpp
src/vapp/gui/: gui.cpp  gui.hpp  gui_style.cpp  gui_style.hpp  i_fragment.hpp  theme.cpp  theme.hpp
src/vapp/gui/fragment/: i_base_fragment.hpp
tests/: CMakeLists.txt  action_tests.cpp  database_tests.cpp  event_tests.cpp  example_test.cpp  network_tests.cpp  resource_manager_tests.cpp
